--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -3,4 +3,10 @@ $white: '#fff';
 $lightgrey: '#eeefef';
 $black: '#222';
 
+// sizes
 $browser-context: 16;
+
+// transitions
+$transition-fast: 200ms;
+$transition-normal: 300ms;
+$transition-slow: 750ms;
