--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -6,5 +6,8 @@
 // global styles
 @import 'globals';
 
+// components
+@import './components/header';
+
 // containers
 @import './containers/login';
