--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -1,7 +1,7 @@
 // colors
-$white: '#fff';
-$lightgrey: '#eeefef';
-$black: '#222';
+$white: #fff;
+$lightgrey: #eeefef;
+$black: #1e272e;
 
 // sizes
 $browser-context: 16;
