--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -29,7 +29,7 @@ $screen-xl-min: 1200px;
 // sizes
 $gutter-x: 15;
 $gutter-y: 10;
-$header-height: 65px;
+$header-height: 65;
 
 // transitions
 $transition-fast: 200ms;
