alert errors + Alert component

--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -6,6 +6,8 @@ $grey: #989898;
 $black: #343434;
 $steel: #b2bec3;
 $red: #e84118;
+$green: #6ab04c;
+$yellow: #f9ca24;
 
 // font-sizes
 $browser-context: 16;
