--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -11,6 +11,7 @@
 @import './components/forms/login';
 @import './components/loader';
 @import './components/jumbotron';
+@import './components/alerts';
 
 // containers
 @import './containers/login';
