--- a/client/assets/styles/components/_jumbotron.scss
+++ b/client/assets/styles/components/_jumbotron.scss
@@ -2,6 +2,7 @@
   font-size: 0.75em;
   margin-bottom: em(15);
   text-align: center;
+  max-width: em(450);
 
   @include xs {
     font-size: 0.85em;
@@ -13,6 +14,7 @@
 
   &-heading {
     margin: 0;
+    font-family: $font-family-bold;
     font-size: em($font-size-h1);
     color: $black;
   }
