--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -15,6 +15,7 @@
 @import './components/loader';
 @import './components/jumbotron';
 @import './components/alerts';
+@import './components/buttons';
 
 // containers
 @import './containers/login';
