--- a/client/assets/styles/containers/_dashboard.scss
+++ b/client/assets/styles/containers/_dashboard.scss
@@ -1,4 +1,5 @@
 .dashboard {
-  border-top: 1px solid darken($lightgrey, 10%);
-  height: auto;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
