--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -37,6 +37,7 @@ $screen-xl-min: 1200px;
 $gutter-x: 15;
 $gutter-y: 10;
 $header-height: 65;
+$sidebar-width: 235;
 
 // transitions
 $transition-fast: 200ms;
