--- a/client/assets/styles/_globals.scss
+++ b/client/assets/styles/_globals.scss
@@ -10,6 +10,7 @@ html,
 body {
   margin: 0;
   height: 100%;
+  min-height: 100%;
   overflow-x: hidden;
   font-family: $font-family-regular;
   font-size: em($browser-context);
@@ -18,10 +19,14 @@ body {
 #root,
 #app {
   height: inherit;
+  min-height: inherit;
   font-size: inherit;
 }
 
 #content {
-  height: calc(100% - #{em($header-height)});
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  min-height: calc(100% - #{em($header-height)});
   background-color: $lightgrey;
 }
