--- a/client/assets/styles/components/Dashboard/_groups.scss
+++ b/client/assets/styles/components/Dashboard/_groups.scss
@@ -15,9 +15,18 @@
     }
 
     &-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       padding: em($gutter-y) em($gutter-x);
       border-radius: em(5);
       border: 1px solid rgba($grey, 0.5);
+
+      &-remove {
+        img {
+          width: em(25);
+        }
+      }
     }
   }
 }
