--- a/client/assets/styles/components/_header.scss
+++ b/client/assets/styles/components/_header.scss
@@ -28,6 +28,7 @@
     align-items: center;
     justify-content: center;
     margin-left: em($gutter-x);
+    outline: none;
     &-icon {
       width: em(35);
       opacity: 0.75;
