--- a/client/assets/styles/components/Dashboard/_groups.scss
+++ b/client/assets/styles/components/Dashboard/_groups.scss
@@ -1,6 +1,7 @@
 .dashboard-groups {
   &__heading {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: em($gutter-y);
   }
@@ -20,9 +21,19 @@
       justify-content: space-between;
       padding: em($gutter-y) em($gutter-x);
       border-radius: em(5);
-      border: 1px solid rgba($grey, 0.5);
+      background-color: $white;
+
+      &-controls {
+        display: flex;
+        align-items: center;
+      }
 
       &-remove {
+        margin-left: em(10);
+      }
+
+      &-remove,
+      &-edit {
         outline: none;
         img {
           width: em(25);
@@ -39,6 +50,48 @@
           }
         }
       }
+    }
+  }
+  &__form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: em(5);
+    padding: em($gutter-y) 0;
+
+    &-input,
+    &-btn {
+      border: none;
+      outline: none;
+      border-radius: em(5);
+      font-size: em(16);
+    }
+
+    &-input {
+      width: 100%;
+      margin-bottom: em(10);
+      padding: em(15) em(20);
+
+      &.invalid {
+        border: 1px solid rgba($red, 0.35);
+        background-color: rgba($red, 0.025);
+      }
+    }
+
+    &-btn {
+      width: 100%;
+
+      @include md {
+        min-width: em(125);
+        margin-left: auto;
+        width: auto;
+      }
+    }
+
+    &-feedback {
+      margin-bottom: em(15);
+      width: 100%;
+      color: $red;
     }
   }
 }
