--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -23,8 +23,8 @@ $font-size-h6: 18;
 
 // font-families
 $fallback: Arial, Helvetica, sans-serif;
-$font-family-bold: 'Roboto-Bold', $fallback;
-$font-family-regular: 'Roboto-Regular', $fallback;
+$font-family-bold: "Roboto-Bold", $fallback;
+$font-family-regular: "Roboto-Regular", $fallback;
 
 // breakpoints
 $screen-xs-min: 425px;
@@ -37,7 +37,7 @@ $screen-xl-min: 1200px;
 $gutter-x: 15;
 $gutter-y: 10;
 $header-height: 65;
-$sidebar-width: 235;
+$sidebar-width: 230;
 
 // transitions
 $transition-fast: 200ms;
