--- a/client/assets/styles/components/_sidebar.scss
+++ b/client/assets/styles/components/_sidebar.scss
@@ -10,6 +10,7 @@
   border-right: 1px solid rgba($grey, 0.15);
   background-color: rgba($lightgrey, 0.9);
   transition: left $transition-fast;
+  z-index: 1000;
 
   @include md {
     position: relative;
