--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -19,7 +19,7 @@
 @import "./components/buttons";
 @import "./components/sidebar";
 @import "./components/activity";
-@import "./components/forms/login";
+@import "./components/login/form";
 @import "./components/dashboard/content";
 @import "./components/dashboard/groups";
 
