--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -19,6 +19,8 @@
 @import "./components/buttons";
 @import "./components/sidebar";
 @import "./components/activity";
+@import "./components/grid";
+@import "./components/hamburger";
 @import "./components/login/form";
 @import "./components/dashboard/content";
 @import "./components/dashboard/groups";
