external heading component

--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -14,13 +14,14 @@
 
 // components
 @import "./components/header";
+@import "./components/heading";
+@import "./components/hamburger";
 @import "./components/jumbotron";
 @import "./components/alerts";
 @import "./components/buttons";
 @import "./components/sidebar";
 @import "./components/activity";
 @import "./components/grid";
-@import "./components/hamburger";
 @import "./components/login/form";
 @import "./components/dashboard/content";
 @import "./components/dashboard/groups";
