--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -22,6 +22,7 @@
 @import "./components/sidebar";
 @import "./components/activity";
 @import "./components/grid";
+@import "./components/forms";
 @import "./components/lists";
 @import "./components/login/form";
 @import "./components/dashboard/content";
