--- a/client/assets/styles/base/_effects.scss
+++ b/client/assets/styles/base/_effects.scss
@@ -3,21 +3,21 @@
     opacity: 0.01;
     &.fade-enter-active {
       opacity: 1;
-      transition: opacity 500ms ease-in;
+      transition: opacity $transition-fast ease-in;
     }
   }
   &-leave {
     opacity: 1;
     &.fade-leave-active {
       opacity: 0.01;
-      transition: opacity 300ms ease-in;
+      transition: opacity $transition-normal ease-in;
     }
   }
   &-appear {
     opacity: 0.01;
     &.fade-appear-active {
       opacity: 1;
-      transition: opacity 500ms ease-in;
+      transition: opacity $transition-fast ease-in;
     }
   }
 }
