--- a/client/assets/styles/helpers/_variables.scss
+++ b/client/assets/styles/helpers/_variables.scss
@@ -39,6 +39,7 @@ $gutter-y: 10;
 $header-height: 65;
 $sidebar-width: 230;
 $container-max-width: $screen-md-min;
+$icon-size: 25;
 
 // hamburger
 $hamburger-size: 40;
