--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -25,9 +25,11 @@
 @import "./components/grid";
 @import "./components/forms";
 @import "./components/lists";
+@import "./components/icons";
 @import "./components/login/form";
 @import "./components/dashboard/content";
 @import "./components/dashboard/groups";
+@import "./components/dashboard/semesters";
 
 // containers
 @import "./containers/login";
