--- a/client/assets/styles/components/_lists.scss
+++ b/client/assets/styles/components/_lists.scss
@@ -11,17 +11,46 @@
   &__item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: em($gutter-y) em($gutter-x);
     border-radius: em(5);
     background-color: $white;
 
+    &-number {
+      padding-top: em(5);
+      padding-bottom: em(5);
+      padding-right: em(15);
+      padding-left: em(10);
+      font-size: em($font-size-h4);
+    }
+
     &-body {
+      border-left: 1px solid $lightgrey;
+      border-right: 1px solid $lightgrey;
+      padding-left: 1em;
+      padding-right: 1em;
+
+      .info {
+        display: flex;
+        flex-wrap: wrap;
+
+        &-label,
+        &-value {
+          line-height: 1.5;
+        }
+
+        &-label {
+          margin-right: .25em;
+        }
+        &-value {
+          font-family: $font-family-bold;
+        }
+      }
     }
 
     &-controls {
       display: flex;
       align-items: center;
+      margin-left: auto;
 
       &-btn {
         margin-left: em(10);
