--- a/client/assets/styles/components/_grid.scss
+++ b/client/assets/styles/components/_grid.scss
@@ -1,3 +1,6 @@
+$columns: 12;
+$width: 100%;
+
 .container {
   display: flex;
   flex-direction: column;
@@ -12,5 +15,58 @@
   &-fluid {
     @extend .container;
     max-width: 100%;
+  }
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: - em($gutter-x);
+  margin-right: - em($gutter-y);
+
+  > [class*="col-"] {
+    position: relative;
+    min-height: 1px;
+    padding-left: em($gutter-x);
+    padding-right: em($gutter-x);
+  }
+}
+
+@for $i from 1 through $columns {
+  .col-xs-#{$i} {
+    width: ($width / $columns) * $i;
+  }
+}
+
+@include sm {
+  @for $i from 1 through $columns {
+    .col-sm-#{$i} {
+      width: ($width / $columns) * $i;
+    }
+  }
+}
+
+@include md {
+  @for $i from 1 through $columns {
+    .col-md-#{$i} {
+      width: ($width / $columns) * $i;
+    }
+  }
+}
+
+@include lg {
+  @for $i from 1 through $columns {
+    .col-lg-#{$i} {
+      width: ($width / $columns) * $i;
+    }
+  }
+}
+
+@include xl {
+  @for $i from 1 through $columns {
+    .col-xl-#{$i} {
+      width: ($width / $columns) * $i;
+    }
   }
 }
