--- a/client/assets/styles/components/Dashboard/_groups.scss
+++ b/client/assets/styles/components/Dashboard/_groups.scss
@@ -1,2 +1,34 @@
-.dashboard-groups {
+.dashboard {
+  &-groups {}
+
+  &-editgroup {
+    .form {
+      &__week {
+        &-title {
+          margin-bottom: em(10);
+          font-size: em($font-size-h3);
+          color: $black;
+        }
+      }
+
+      &__day {}
+
+      &__pair {
+        padding-left: em($gutter-x);
+        padding-right: em($gutter-x);
+        border: 1px solid $grey;
+
+        &:not(:last-of-type) {
+          margin-bottom: em($gutter-y);
+        }
+
+        &-title {
+          margin-top: em(10);
+          margin-bottom: em(10);
+          font-size: em($font-size-large);
+          color: $black;
+        }
+      }
+    }
+  }
 }
