schedule logic updated, better perfomance

--- a/client/assets/styles/components/Dashboard/_groups.scss
+++ b/client/assets/styles/components/Dashboard/_groups.scss
@@ -13,7 +13,7 @@
 
       &__day {}
 
-      &__pair {
+      &__event {
         padding-left: em($gutter-x);
         padding-right: em($gutter-x);
         border: 1px solid $grey;
