--- a/client/assets/styles/index.scss
+++ b/client/assets/styles/index.scss
@@ -26,6 +26,7 @@
 @import "./components/forms";
 @import "./components/lists";
 @import "./components/icons";
+@import "./components/checkboxes";
 @import "./components/datepicker";
 @import "./components/login/form";
 @import "./components/dashboard/content";
