--- a/client/assets/styles/components/_forms.scss
+++ b/client/assets/styles/components/_forms.scss
@@ -50,7 +50,7 @@
   &__title {
     margin-top: em($gutter-y);
     margin-bottom: em($gutter-y);
-    font-size: $font-size-h3;
+    font-size: em($font-size-h3);
     color: $black;
   }
 
@@ -59,7 +59,7 @@
 
     legend {
       font-family: $font-family-bold;
-      font-size: $font-size-small;
+      font-size: em($font-size-h4);
       color: $black;
     }
   }
