--- a/client/assets/styles/_vendors.scss
+++ b/client/assets/styles/_vendors.scss
@@ -1,2 +1,3 @@
 @import '~normalize.css';
 @import '~react-datepicker/dist/react-datepicker.css';
+@import '~react-accessible-accordion/dist/fancy-example.css';
